examples/test/testpolicy9597.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9597
  namespace: namespace34
spec:
  podSelector:
    matchLabels:
      key45: value8
      key35: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key1: value30
          key37: value20
      podSelector:
        matchLabels:
          key9: value4
          key18: value41
          key5: value39
